--- a/themes/classic/assets/css/style.css
+++ b/themes/classic/assets/css/style.css
@@ -1712,6 +1712,24 @@ a.menu:after, .dropdown-toggle:after {
   font-weight: 200;
   line-height: 27px;
 }
+.form-unit {
+  background-color: #f5f5f5;
+  -webkit-border-radius: 6px;
+  -moz-border-radius: 6px;
+  border-radius: 6px;
+  padding-top: 30px;
+}
+.form-unit h1 {
+  margin-bottom: 0;
+  font-size: 60px;
+  line-height: 1;
+  letter-spacing: -1px;
+}
+.form-unit p {
+  font-size: 18px;
+  font-weight: 200;
+  line-height: 27px;
+}
 footer {
   margin-top: 17px;
   padding-top: 17px;
@@ -1948,6 +1966,13 @@ button.btn::-moz-focus-inner, input[type=submit].btn::-moz-focus-inner {
   *margin-top: 3px;
   /* IE7 spacing */
 
+}
+.alert-message ul {
+  margin: 0;
+}
+.alert-message li {
+  color: white;
+  list-style: none;
 }
 .alert-message h5 {
   line-height: 18px;
@@ -2521,4 +2546,49 @@ table.list thead a {
   display: block;
   line-height: 32px;
   vertical-align: top;
+}
+/**
+ * Game View
+/* -------------------------------------------------------------------------------------------------------------------*/
+#game-info .info-row {
+  font-size: 12px;
+  vertical-align: middle;
+}
+#game-info .info-row b {
+  font-size: 18px;
+}
+#game .sentinel-row, #game .scourge-row {
+  color: #ffffff;
+}
+#game .sentinel-row td {
+  text-align: center;
+  background-color: #57a957;
+  background-repeat: repeat-x;
+  background-image: -khtml-gradient(linear, left top, left bottom, from(#62c462), to(#57a957));
+  background-image: -moz-linear-gradient(top, #62c462, #57a957);
+  background-image: -ms-linear-gradient(top, #62c462, #57a957);
+  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #62c462), color-stop(100%, #57a957));
+  background-image: -webkit-linear-gradient(top, #62c462, #57a957);
+  background-image: -o-linear-gradient(top, #62c462, #57a957);
+  background-image: linear-gradient(top, #62c462, #57a957);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#62c462', endColorstr='#57a957', GradientType=0);
+  text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
+  border-color: #57a957 #57a957 #3d773d;
+  border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
+}
+#game .scourge-row td {
+  text-align: center;
+  background-color: #c43c35;
+  background-repeat: repeat-x;
+  background-image: -khtml-gradient(linear, left top, left bottom, from(#ee5f5b), to(#c43c35));
+  background-image: -moz-linear-gradient(top, #ee5f5b, #c43c35);
+  background-image: -ms-linear-gradient(top, #ee5f5b, #c43c35);
+  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #ee5f5b), color-stop(100%, #c43c35));
+  background-image: -webkit-linear-gradient(top, #ee5f5b, #c43c35);
+  background-image: -o-linear-gradient(top, #ee5f5b, #c43c35);
+  background-image: linear-gradient(top, #ee5f5b, #c43c35);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ee5f5b', endColorstr='#c43c35', GradientType=0);
+  text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
+  border-color: #c43c35 #c43c35 #882a25;
+  border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
 }
