--- a/themes/classic/assets/css/style/layout.less
+++ b/themes/classic/assets/css/style/layout.less
@@ -43,6 +43,10 @@ body#theme-classic {
 }
 
 
+#top-navbar .navbar-inner {
+    background: url('../img/dota/shared.png') 0 0 repeat-x;
+}
+
 /**
  * Tables
 /* -------------------------------------------------------------------------------------------------------------------*/
